Endpoints metadata and translator
