# CONVERTER/src/com/jalasoft/converter/main.py
@@ -18,7 +18,7 @@ from flask_restful import Api
 from controler.routes import SWAGGERUI_BLUEPRINT
 from controler.routes import Download, VideoToZipImage, VideoToZip, VideoToVid
 from controler.routes import ImageToImage, ImageFlipper, ImageBlackWhite, ImageResizer, ImageRotater, ImageToPdf, ImageToText, PdfToImage
-from controler.routes import VideoToAudio, AudioToAudio, IncreaseAudioVolume, AudioMixAudio
+from controler.routes import VideoToAudio, AudioToAudio, IncreaseAudioVolume, AudioMixAudio, TextTranslate, GetMetadata
 from config import UPLOAD_FOLDER, RESPONSE_FOLDER
 
 app = Flask(__name__)
@@ -40,7 +40,8 @@ api.add_resource(VideoToAudio, '/audioextractaudio')
 api.add_resource(AudioToAudio, '/audiotoaudio')
 api.add_resource(IncreaseAudioVolume, '/audioincreasevolume')
 api.add_resource(AudioMixAudio, "/audiomixaudio")
-
+api.add_resource(TextTranslate, "/texttranslator")
+api.add_resource(GetMetadata, "/metadatageter")
 
 print(os.getcwd())
 if __name__ == '__main__':
